--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="bootstrap.css">
-<link rel="icon" href="D:\projects\flex\flex items\bmw-m-logo-1CC2921034-seeklogo.com - Copy.png">
+<link rel="icon" href="C:\Users\hp\boot\bmw-m-logo-1CC2921034-seeklogo.com - Copy.png">
 </head>
 <body>
 <nav class="navbar bg-body-tertiary">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">
-      <img src="d:\projects\flex\flex items\bmw-m-logo-1CC2921034-seeklogo.com.png"   alt="Logo" width="70" height="70" class="d-inline-block align-text-top">
-<img src="d:\projects\flex\flex items\image.png" alt="Logo" width="100" height="70" class="d-inline-block align-text-top">
+      <img src="C:\Users\hp\boot\bmw-m-logo-1CC2921034-seeklogo.com - Copy.png"   alt="Logo" width="70" height="70" class="d-inline-block align-text-top">
+<img src="C:\Users\hp\boot\image.png" alt="Logo" width="100" height="70" class="d-inline-block align-text-top">
     </a>
 
 <ul class="nav justify-content-end">
