--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <div class="row">
 <div class="col-12 col-md-6">
-<img src="d:\projects\flex\flex items\bmw-s-1000-rr-1284x2778-9796.jpg" style="margin-left:380px;height:700px;width:400px;margin-top:50px">
+<img src="C:\Users\hp\boot\s100rr.webp" style="margin-left:380px;height:700px;width:400px;margin-top:50px">
 </div>
 
 <div class="col-12 col-md-6">
